samples/_failures_safe/1761158491_5cf2e0_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_895bc565.c: In function ‘pointcloud_free’:
./samples/SAFE/__tmp_895bc565.c:122:5: error: expected declaration or statement at end of input
  122 |     pc->count = 0;
      |     ^~
